# biotsavart

./: README.md  pyproject.toml  setup.py
examples/: implementation_overview.ipynb  tmp_testing_circular_loop_on_axis.ipynb  tmp_testing_square_loop.ipynb
