[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "biotsavart"
version = "0.0.1"
authors = [
  { name="matt griffiths", email="mpg@geo.au.dk" },
]
description = "A lightweight package for calculating the magnetic field in free space"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ['numpy', 'matplotlib']


